checked by supervisor

--- a/llt.bib
+++ b/llt.bib
@@ -71,10 +71,9 @@
 @inproceedings{jeong2017homogeneity,
   title={Homogeneity patch search method for efficient vehicle color classification using front-of-vehicle image},
   author={Jeong, Yoosoo and Park, Kil Houm and Park, Daejin},
-  booktitle={2017 IEEE International Conference on Imaging Systems and Techniques (IST)},
+  booktitle={{IEEE International Conference on Imaging Systems and Techniques (IST)}},
   pages={1--5},
-  year={2017},
-  organization={IEEE}
+  year={2017}
 }
 
 @article{zhang2017vehicle,
@@ -91,7 +90,7 @@
 @inproceedings{kim2008deciding,
   title={Deciding the number of color histogram bins for vehicle color recognition},
   author={Kim, Ku-Jin and Park, Sun-Mi and Choi, Yoo-Joo},
-  booktitle={2008 IEEE Asia-Pacific Services Computing Conference},
+  booktitle={{IEEE Asia-Pacific Services Computing Conference}},
   pages={134--138},
   year={2008},
   organization={IEEE}
@@ -123,7 +122,7 @@
 @inproceedings{liu2016deep,
   title={A deep learning-based approach to progressive vehicle re-identification for urban surveillance},
   author={Liu, Xinchen and Liu, Wu and Mei, Tao and Ma, Huadong},
-  booktitle={European Conference on Computer Vision},
+  booktitle={{European Conference on Computer Vision}},
   pages={869--884},
   year={2016},
   organization={Springer}
@@ -132,7 +131,7 @@
 @inproceedings{liu2016deep2,
   title={Deep relative distance learning: Tell the difference between similar vehicles},
   author={Liu, Hongye and Tian, Yonghong and Yang, Yaowei and Pang, Lu and Huang, Tiejun},
-  booktitle={Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition},
+  booktitle={{Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition}},
   pages={2167--2175},
   year={2016}
 }
@@ -140,7 +139,7 @@
 @inproceedings{liu2016large,
   title={Large-scale vehicle re-identification in urban surveillance videos},
   author={Liu, Xinchen and Liu, Wu and Ma, Huadong and Fu, Huiyuan},
-  booktitle={2016 IEEE International Conference on Multimedia and Expo (ICME)},
+  booktitle={{2016 IEEE International Conference on Multimedia and Expo (ICME)}},
   pages={1--6},
   year={2016},
   organization={IEEE}
@@ -150,7 +149,7 @@
 @inproceedings{shen2017learning,
   title={Learning deep neural networks for vehicle re-id with visual-spatio-temporal path proposals},
   author={Shen, Yantao and Xiao, Tong and Li, Hongsheng and Yi, Shuai and Wang, Xiaogang},
-  booktitle={Proceedings of the IEEE International Conference on Computer Vision},
+  booktitle={{Proceedings of the IEEE International Conference on Computer Vision}},
   pages={1900--1909},
   year={2017}
 }
@@ -222,7 +221,7 @@
 @article{shannon1948mathematical,
   title={A mathematical theory of communication},
   author={Shannon, Claude Elwood},
-  journal={Bell system technical journal},
+  journal={{Bell System Technical Journal}},
   volume={27},
   number={3},
   pages={379--423},
@@ -234,7 +233,7 @@
 @inproceedings{khan2013discriminative,
   title={Discriminative color descriptors},
   author={Khan, Rahat and Van de Weijer, Joost and Shahbaz Khan, Fahad and Muselet, Damien and Ducottet, Christophe and Barat, Cecile},
-  booktitle={Proceedings of the IEEE conference on computer vision and pattern recognition},
+  booktitle={{Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition}},
   pages={2866--2873},
   year={2013}
 }
@@ -243,7 +242,7 @@
 @inproceedings{lessard2016countingapp,
   title={The countingapp, or how to count vehicles in 500 hours of video},
   author={Lessard, Adrien and Belisle, Francois and Bilodeau, Guillaume-Alexandre and Saunier, Nicolas},
-  booktitle={Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition Workshops},
+  booktitle={{Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition Workshops}},
   pages={16--24},
   year={2016}
 }
@@ -263,7 +262,7 @@
 @inproceedings{momin2015vehicle,
   title={Vehicle detection and attribute based search of vehicles in video surveillance system},
   author={Momin, Bashirahamad F and Mujawar, Tabssum M},
-  booktitle={2015 International Conference on Circuits, Power and Computing Technologies [ICCPCT-2015]},
+  booktitle={{International Conference on Circuits, Power and Computing Technologies [ICCPCT-2015]}},
   pages={1--4},
   year={2015},
   organization={IEEE}
@@ -273,15 +272,15 @@
 @inproceedings{yang2015semantic,
   title={Semantic Description and Information Retrieval Research of Surveillance Video in Smart Transportation System},
   author={Yang, Boxiong and Huang, Jing and Yang, Yuqi},
-  booktitle={2015 International Conference on Electromechanical Control Technology and Transportation},
+  booktitle={{International Conference on Electromechanical Control Technology and Transportation}},
   year={2015},
   organization={Atlantis Press}
 }
 
 @inproceedings{wang2016research,
   title={Research of vehicle speed detection algorithm in video surveillance},
-  author={Wang, Jin-xiang},
-  booktitle={2016 International Conference on Audio, Language and Image Processing (ICALIP)},
+  author={Wang, Jin-Xiang},
+  booktitle={{International Conference on Audio, Language and Image Processing (ICALIP)}},
   pages={349--352},
   year={2016},
   organization={IEEE}
@@ -339,7 +338,7 @@
 @inproceedings{arya2016real,
   title={Real-time vehicle detection and tracking},
   author={Arya, KV and Tiwari, Shailendra and Behwalc, Saurabh},
-  booktitle={2016 13th International Conference on Electrical Engineering/Electronics, Computer, Telecommunications and Information Technology (ECTI-CON)},
+  booktitle={{13th International Conference on Electrical Engineering/Electronics, Computer, Telecommunications and Information Technology (ECTI-CON)}},
   pages={1--6},
   year={2016},
   organization={IEEE}
@@ -348,7 +347,7 @@
 @inproceedings{liu2016highway,
   title={Highway vehicle counting in compressed domain},
   author={Liu, Xu and Wang, Zilei and Feng, Jiashi and Xi, Hongsheng},
-  booktitle={Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition},
+  booktitle={{Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition}},
   pages={3016--3024},
   year={2016}
 }
@@ -376,7 +375,7 @@
 @inproceedings{choong2017modeling,
   title={Modeling of vehicle trajectory clustering based on LCSS for traffic pattern extraction},
   author={Choong, Mei Yeen and Angeline, Lorita and Chin, Renee Ka Yin and Yeo, Kiam Beng and Teo, Kenneth Tze Kin},
-  booktitle={2017 IEEE 2nd International Conference on Automatic Control and Intelligent Systems (I2CACIS)},
+  booktitle={{IEEE 2nd International Conference on Automatic Control and Intelligent Systems (I2CACIS)}},
   pages={74--79},
   year={2017},
   organization={IEEE}
@@ -386,7 +385,7 @@
 @inproceedings{ren2018learning,
   title={Learning Traffic Behaviors by Extracting Vehicle Trajectories from Online Video Streams},
   author={Ren, Xinhe and Wang, David and Laskey, Michael and Goldberg, Ken},
-  booktitle={2018 IEEE 14th International Conference on Automation Science and Engineering (CASE)},
+  booktitle={{IEEE 14th International Conference on Automation Science and Engineering (CASE)}},
   pages={1276--1283},
   year={2018},
   organization={IEEE}
@@ -396,7 +395,7 @@
 @inproceedings{shi2017study,
   title={Study on parking spaces analyzing and guiding system based on video},
   author={Shi, Chengzhi and Liu, Jihong and Miao, Chenchen},
-  booktitle={2017 23rd International Conference on Automation and Computing (ICAC)},
+  booktitle={{23rd International Conference on Automation and Computing (ICAC)}},
   pages={1--5},
   year={2017},
   organization={IEEE}
@@ -417,7 +416,7 @@
 @inproceedings{ling2017identifying,
   title={Identifying parking spaces \& detecting occupancy using vision-based IoT devices},
   author={Ling, Xiao and Sheng, Jie and Baiocchi, Orlando and Liu, Xing and Tolentino, Matthew E},
-  booktitle={2017 Global Internet of Things Summit (GIoTS)},
+  booktitle={{Global Internet of Things Summit (GIoTS)}},
   pages={1--6},
   year={2017},
   organization={IEEE}
@@ -437,7 +436,7 @@
 @inproceedings{saunier2006feature,
   title={A feature-based tracking algorithm for vehicles in intersections},
   author={Saunier, Nicolas and Sayed, Tarek},
-  booktitle={The 3rd Canadian Conference on Computer and Robot Vision (CRV'06)},
+  booktitle={{The 3rd Canadian Conference on Computer and Robot Vision (CRV'06)}},
   pages={59--59},
   year={2006},
   organization={IEEE}
@@ -455,7 +454,8 @@
 }
 
 
-@misc{eyespectrum, title={Normalized human photoreceptor absorbances for different wavelengths of light},
+@misc{eyespectrum, 
+title={Normalized human photoreceptor absorbances for different wavelengths of light},
 author={OpenStax College},
 year={2013},
 url={https://cnx.org/contents/FPtK1zmh@6.27:s3XqfSLV@4/Sensory-Perception}}
@@ -515,7 +515,7 @@ url={https://cnx.org/contents/FPtK1zmh@6.27:s3XqfSLV@4/Sensory-Perception}}
 @InProceedings{Cheng_2013_ICCV,
 author = {Cheng, Ming-Ming and Warrell, Jonathan and Lin, Wen-Yan and Zheng, Shuai and Vineet, Vibhav and Crook, Nigel},
 title = {Efficient Salient Region Detection with Soft Image Abstraction},
-booktitle = {The IEEE International Conference on Computer Vision (ICCV)},
+booktitle = {{IEEE International Conference on Computer Vision (ICCV)}},
 month = {December},
 year = {2013}
 }
@@ -558,7 +558,7 @@ year = {2013}
 @article{zhang2013mining,
   title={Mining semantic context information for intelligent video surveillance of traffic scenes},
   author={Zhang, Tianzhu and Liu, Si and Xu, Changsheng and Lu, Hanqing},
-  journal={IEEE transactions on industrial informatics},
+  journal={IEEE Transactions on Industrial Informatics},
   volume={9},
   number={1},
   pages={149--160},
@@ -580,7 +580,7 @@ year = {2013}
 @inproceedings{redmon2016you,
   title={You only look once: Unified, real-time object detection},
   author={Redmon, Joseph and Divvala, Santosh and Girshick, Ross and Farhadi, Ali},
-  booktitle={Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition},
+  booktitle={{Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition}},
   pages={779--788},
   year={2016}
 }
@@ -588,7 +588,7 @@ year = {2013}
 @inproceedings{jermsurawong2012car,
   title={Car parking vacancy detection and its application in 24-hour statistical analysis},
   author={Jermsurawong, Jermsak and Ahsan, Mian Umair and Haidar, Abdulhamid and Dong, Haiwei and Mavridis, Nikolaos},
-  booktitle={Frontiers of Info. Tech. (FIT), Int. Conf. on},
+  booktitle={{Int. Conf. on Frontiers of Info. Tech. (FIT)}},
   pages={84--90},
   year={2012}
 }
@@ -739,7 +739,7 @@ year = {2013}
 @inproceedings{lim2017,
   title={On vehicle state tracking for long-term carpark video surveillance},
   author={Lim, Ryan Woei-Sheng and Cheong, Clarence Weihan and See, John and Tan, Ian KT and Wong, Lai-Kuan and Khor, Huai-Qian},
-  booktitle={Signal and Image Processing Applications (ICSIPA), 2017 IEEE International Conference on},
+  booktitle={{Signal and Image Processing Applications (ICSIPA), 2017 IEEE International Conference on}},
   pages={368--373},
   year={2017},
   organization={IEEE}
@@ -753,7 +753,7 @@ year = {2013}
 @inproceedings{cheong2018vehicle,
   title={Vehicle Semantics Extraction and Retrieval for Long-Term Carpark Video Surveillance},
   author={Cheong, Clarence Weihan and Lim, Ryan Woei-Sheng and See, John and Wong, Lai-Kuan and Tan, Ian KT and Aris, Azrin},
-  booktitle={International Conference on Multimedia Modeling},
+  booktitle={{International Conference on Multimedia Modeling}},
   pages={315--326},
   year={2018},
   organization={Springer}
@@ -771,6 +771,7 @@ journal={Colour metric: https://www.compuphase.com/cmetric.htm},   year={2018}}
   journal={technology. ihs. com},
   year={2016}
 }
+
 
 @article{paschos2001perceptually,
   title={Perceptually uniform color spaces for color texture analysis: an empirical evaluation},
@@ -819,7 +820,7 @@ journal={Colour metric: https://www.compuphase.com/cmetric.htm},   year={2018}}
 @inproceedings{kulis2009kernelized,
   title={Kernelized locality-sensitive hashing for scalable image search},
   author={Kulis, Brian and Grauman, Kristen},
-  booktitle={2009 IEEE 12th international conference on computer vision},
+  booktitle={IEEE 12th International Conference on Computer Vision}},
   pages={2130--2137},
   year={2009},
   organization={IEEE}
@@ -846,10 +847,28 @@ journal={Colour metric: https://www.compuphase.com/cmetric.htm},   year={2018}}
 @article{everingham2010pascal,
   title={The pascal visual object classes (voc) challenge},
   author={Everingham, Mark and Van Gool, Luc and Williams, Christopher KI and Winn, John and Zisserman, Andrew},
-  journal={International journal of computer vision},
+  journal={International Journal of computer vision},
   volume={88},
   number={2},
   pages={303--338},
   year={2010},
   publisher={Springer}
+}
+
+@book{diggle2013statistical,
+  title={Statistical analysis of spatial and spatio-temporal point patterns},
+  author={Diggle, Peter J},
+  year={2013},
+  publisher={CRC press}
+}
+
+@article{jarvelin2002cumulated,
+  title={Cumulated gain-based evaluation of IR techniques},
+  author={J{\"a}rvelin, Kalervo and Kek{\"a}l{\"a}inen, Jaana},
+  journal={ACM Transactions on Information Systems (TOIS)},
+  volume={20},
+  number={4},
+  pages={422--446},
+  year={2002},
+  publisher={ACM New York, NY, USA}
 }
